--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,32 @@ footer {
   transition: all 0.4s;
 }
 
+/* Topへ戻るボタン */
+.top {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: #FFD54D;
+  cursor: pointer;
+  border-radius: 4px;
+  z-index: 5;
+  right: 20px;
+  position: fixed;
+  bottom: 2%;
+}
+.top::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 12px 15px 12px;
+  border-color: transparent transparent #fff transparent;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .thum {
   aspect-ratio: 16/9;
   width: 100%;
@@ -284,6 +310,10 @@ footer {
   .btn--more {
     font-size: 1rem;
     width: 230px;
+  }
+  /* Topへ戻るボタン */
+  .top {
+    right: 4%;
   }
   .mt-70 {
     margin-top: 100px;
