--- a/css/styles.scss
+++ b/css/styles.scss
@@ -261,6 +261,34 @@ footer {
   }
 }
 
+/* Topへ戻るボタン */
+.top{
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: $accentColor;
+  cursor: pointer;
+  border-radius: 4px;
+  z-index: 5;
+  right: 20px; 
+  position:fixed;
+  bottom: 2%;
+  
+
+  &::after{
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 12px 15px 12px;
+    border-color: transparent transparent #fff transparent;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
 .thum{
   aspect-ratio: 16 / 9;
   width: 100%;
@@ -326,6 +354,11 @@ footer {
       font-size: rem(16);
       width: 230px;
     }
+  }
+
+  /* Topへ戻るボタン */
+  .top{
+    right: 4%;
   }
 
   .mt-70{
