それぞれのアーカイブページにレスポンシブ用のCSSを追加

--- a/css/styles.css
+++ b/css/styles.css
@@ -315,6 +315,9 @@ footer {
   .top {
     right: 4%;
   }
+  .item--responsive {
+    width: 48%;
+  }
   .mt-70 {
     margin-top: 100px;
   }
@@ -324,6 +327,11 @@ footer {
   /*  パンクズ  */
   .breadcrumbs {
     height: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .item--responsive {
+    width: 31%;
   }
 }
 /* -------------------------------------------- */
@@ -1067,7 +1075,6 @@ body.active {
   width: 31%;
 }
 .works__item {
-  width: 100%;
   display: flex;
   flex-direction: column-reverse;
   text-align: center;
@@ -1089,16 +1096,6 @@ body.active {
   transition: all 0.4s;
 }
 
-@media (min-width: 768px) {
-  .works__item {
-    width: 48%;
-  }
-}
-@media (min-width: 992px) {
-  .works__item {
-    width: 31%;
-  }
-}
 /* -------------------------------------------- */
 /* 404page */
 /* -------------------------------------------- */
@@ -1518,6 +1515,93 @@ span.wpcf7-not-valid-tip::before {
   }
 }
 /* -------------------------------------------- */
+/* banners */
+/* -------------------------------------------- */
+.banners__list {
+  gap: 16px;
+}
+.banners__image-wrapper {
+  aspect-ratio: 6/5;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  transition: all 0.4s;
+  margin-bottom: 16px;
+  border: 1px solid #dfdfdf;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+}
+.banners__image-wrapper:hover {
+  opacity: 0.8;
+}
+.banners__item-image {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+/*モーダル*/
+.modal-wrapper {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+/* 閉じるボタン */
+.close {
+  background-color: #ddd;
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  z-index: 1;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: all 0.4s;
+}
+
+.close::before,
+.close::after {
+  position: absolute;
+  content: "";
+  border-top: 3px solid #333;
+  width: 20px;
+  top: 50%;
+  left: 50%;
+}
+
+.close::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.close::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.modal-image-wrapper {
+  width: 70%;
+}
+
+/*モーダルの中の画像*/
+.modal-image-wrapper img {
+  max-width: 70%;
+  max-height: 70%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 3px solid rgba(255, 255, 255, 0.1);
+}
+
+/* -------------------------------------------- */
 /* contact */
 /* -------------------------------------------- */
 /* -------------------------------------------- */
@@ -1526,18 +1610,4 @@ span.wpcf7-not-valid-tip::before {
 /* ------------------------------------ */
 /* ▼PC用デザインとして付け足すデザイン */
 /* ------------------------------------ */
-.wrap {
-  background-color: #ddd;
-}
-
-.title {
-  font-size: 1.5rem;
-  text-align: center;
-  background-color: #ddd;
-  -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-  max-width: 480px;
-  margin: 0 auto;
-  padding: 30px 0;
-}
 /*# sourceMappingURL=styles.css.map */
