--- a/css/styles.scss
+++ b/css/styles.scss
@@ -92,7 +92,7 @@ footer {
 
   &::after{
     content: "";
-    background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+    // background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
     width: 100%;
     height: 100px;
     display: block;
@@ -103,10 +103,25 @@ footer {
   }
 
   &__bg{
-    background-color: #000;
+    // background-color: #000;
+  background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/blog-image.png) center/ cover no-repeat;
+  background-attachment: fixed;
     color: #fff;
     padding: 80px 0 100px;
     margin-bottom: 0;
+    position: relative;
+
+    &::after{
+      // content: "";
+      // width: 100%;
+      // height: 100%;
+      // display: block;
+      // background: rgba(0, 0, 0, 0.4);
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      // z-index: 1;
+    }
   }
 
   &.--left{
@@ -1812,7 +1827,7 @@ span.wpcf7-not-valid-tip {
 .banners{
 
   &__list{
-    
+
   }
   
   &__image-wrapper{
