--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,8 @@ footer {
 }
 .sec-heading::after {
   content: "";
+  background: -webkit-gradient(linear, left top, left bottom, from(#C2E9FB), to(#A1C4FD));
+  background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
   width: 100%;
   height: 100px;
   display: block;
