--- a/css/styles.scss
+++ b/css/styles.scss
@@ -92,7 +92,7 @@ footer {
 
   &::after{
     content: "";
-    // background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+    background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
     width: 100%;
     height: 100px;
     display: block;
