ナビメニューの修正

--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,7 @@ footer {
 }
 .header__wrapper {
   height: 100%;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -585,6 +586,9 @@ body.active {
           align-items: center;
   position: relative;
 }
+.mv.marginTop {
+  margin-top: 70px;
+}
 .mv::before {
   content: "";
   background-color: #262f57;
@@ -718,6 +722,9 @@ body.active {
 @media (min-width: 768px) {
   .mv {
     height: calc(100vh - 100px);
+  }
+  .mv.marginTop {
+    margin-top: 100px;
   }
   .site-title {
     font-size: 5rem;
