--- a/css/styles.scss
+++ b/css/styles.scss
@@ -103,25 +103,13 @@ footer {
   }
 
   &__bg{
-    // background-color: #000;
-  background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/blog-image.png) center/ cover no-repeat;
-  background-attachment: fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/blog-image.png) center/ cover no-repeat;
+    // background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+    background-attachment: fixed;
     color: #fff;
     padding: 80px 0 100px;
     margin-bottom: 0;
     position: relative;
-
-    &::after{
-      // content: "";
-      // width: 100%;
-      // height: 100%;
-      // display: block;
-      // background: rgba(0, 0, 0, 0.4);
-      // position: absolute;
-      // top: 0;
-      // left: 0;
-      // z-index: 1;
-    }
   }
 
   &.--left{
@@ -426,6 +414,7 @@ footer {
 
   &__wrapper{
     height: 100%;
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -500,7 +489,6 @@ footer {
 
   &__list{
     display: flex;
-    // align-items: center;
 
     .current a::after,
     a:hover::after {
@@ -622,6 +610,10 @@ body.active{
   align-items: center;
   position: relative;
 
+  &.marginTop{
+    margin-top: 70px;
+  }
+
   &::before{
     content: "";
     background-color: $mainColor;
@@ -720,6 +712,10 @@ body.active{
 @media (min-width: 768px){
   .mv{
     height: calc(100vh - 100px);
+
+    &.marginTop{
+      margin-top: 100px;
+    }
   }
   .site-title{
     font-size: rem(80);
