--- a/css/styles.css
+++ b/css/styles.css
@@ -76,28 +76,20 @@ footer {
 }
 .sec-heading {
   position: relative;
-  padding-top: 60px;
-}
-.sec-heading::after {
-  content: "";
-  background: -webkit-gradient(linear, left top, left bottom, from(#C2E9FB), to(#A1C4FD));
-  background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
-  width: 100%;
-  height: 100px;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-.sec-heading__bg {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5))), url(../images/blog-image.png) center/cover no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.5)), url(../images/blog-image.png) center/cover no-repeat;
-  background-attachment: fixed;
+  padding: 40px 0;
   color: #fff;
-  padding: 80px 0 100px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3f4c88), to(#262f57));
+  background: linear-gradient(to bottom, #3f4c88, #262f57);
+}
+.sec-heading__works {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5))), url(../images/mv.jpeg) center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5)), url(../images/mv.jpeg) center/cover no-repeat;
+  background-attachment: fixed;
+  padding: 80px 0 150px;
   margin-bottom: 0;
   position: relative;
+  text-align: center;
+  color: #fff;
 }
 .sec-heading.--left {
   text-align: left;
@@ -131,12 +123,13 @@ footer {
   .sec-heading {
     font-size: 5.625rem;
     padding-top: 130px;
+    padding: 90px 0;
   }
   .sec-heading::after {
     height: 210px;
   }
-  .sec-heading__bg {
-    padding: 130px 0 230px;
+  .sec-heading__works {
+    padding: 200px 0 328px;
   }
   .sec-heading--ja {
     font-size: 1.25rem;
@@ -281,6 +274,11 @@ footer {
   margin-top: 70px;
 }
 
+/* addClass用 */
+.marginTop {
+  margin-top: 70px;
+}
+
 .bg-color {
   background: #FFFEF8;
 }
@@ -337,6 +335,10 @@ footer {
     width: 48%;
   }
   .mt-70 {
+    margin-top: 100px;
+  }
+  /* addClass用 */
+  .marginTop {
     margin-top: 100px;
   }
   .mla {
@@ -586,9 +588,6 @@ body.active {
           align-items: center;
   position: relative;
 }
-.mv.marginTop {
-  margin-top: 70px;
-}
 .mv::before {
   content: "";
   background-color: #262f57;
@@ -599,8 +598,8 @@ body.active {
   top: 0;
   left: 0;
   z-index: 1;
-  -webkit-clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
-          clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0 0, 30% 0, 70% 100%, 0% 100%);
+          clip-path: polygon(0 0, 30% 0, 70% 100%, 0% 100%);
 }
 .mv::after {
   content: "";
@@ -723,9 +722,6 @@ body.active {
   .mv {
     height: calc(100vh - 100px);
   }
-  .mv.marginTop {
-    margin-top: 100px;
-  }
   .site-title {
     font-size: 5rem;
     padding-top: 240px;
@@ -735,7 +731,7 @@ body.active {
 /* topページのworks */
 /* -------------------------------------------- */
 .works-top {
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 }
 .works-top__wrapper {
   padding-bottom: 70px;
@@ -771,6 +767,8 @@ body.active {
 .works-top__item-content {
   padding: 20px 20px 0 20px;
   line-height: 1.6;
+  font-size: 14px;
+  letter-spacing: 0.15em;
 }
 
 .slideBtn {
@@ -1370,10 +1368,12 @@ span.wpcf7-not-valid-tip::before {
 .single-point__heading {
   border-bottom: 1px solid #FFD54D;
   display: inline-block;
-  font-size: 1rem;
+  font-size: 1.125rem;
+  font-weight: bold;
 }
 .single-point__content {
   margin-top: 20px;
+  letter-spacing: 0.15em;
 }
 
 .single-content {
@@ -1388,6 +1388,10 @@ span.wpcf7-not-valid-tip::before {
   font-size: 1rem;
   font-weight: bold;
 }
+.single-content__text {
+  letter-spacing: 0.15em;
+}
+
 .pagination {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1436,6 +1440,9 @@ span.wpcf7-not-valid-tip::before {
   .single-point__list {
     margin-top: 0;
     width: 60%;
+  }
+  .single-point__heading {
+    font-size: 1.25rem;
   }
   .single-content {
     margin-top: 60px;
