--- a/css/styles.scss
+++ b/css/styles.scss
@@ -88,28 +88,31 @@ footer {
 // セクション関連
 .sec-heading{
   position: relative;
-  padding-top: 60px;
+  // padding-top: 60px;
+  padding: 40px 0;
+  color: #fff;
+  background: linear-gradient(to bottom, #3f4c88,$mainColor);
 
   &::after{
-    content: "";
-    background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
-    width: 100%;
-    height: 100px;
-    display: block;
-    position: absolute;
-    top: 0;
-    left:0;
-    z-index: -1;
+    // content: "";
+    // background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+    // width: 100%;
+    // height: 120px;
+    // display: block;
+    // position: absolute;
+    // top: 0;
+    // left:0;
+    // z-index: -1;
   }
 
-  &__bg{
-    background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/blog-image.png) center/ cover no-repeat;
-    // background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+  &__works{
+    background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/mv.jpeg) center/ cover no-repeat;
     background-attachment: fixed;
-    color: #fff;
-    padding: 80px 0 100px;
+    padding: 80px 0 150px;
     margin-bottom: 0;
     position: relative;
+    text-align: center;
+    color: #fff;
   }
 
   &.--left{
@@ -147,13 +150,14 @@ footer {
   .sec-heading{
     font-size: rem(90);
     padding-top: 130px;
+    padding: 90px 0;
 
     &::after{
       height: 210px;
     }
 
-    &__bg{
-      padding: 130px 0 230px;
+    &__works{
+      padding: 200px 0 328px;
     }
   }
 
@@ -248,7 +252,6 @@ footer {
       left: 0;
     }
   
-
     &::after{
       content:"";
       display: block;
@@ -309,6 +312,11 @@ footer {
 }
 
 .mt-70{
+  margin-top: 70px;
+}
+
+/* addClass用 */
+.marginTop{
   margin-top: 70px;
 }
 
@@ -373,6 +381,11 @@ footer {
 
   .mt-70{
     margin-top: 100px;
+  }
+
+  /* addClass用 */
+  .marginTop{
+    margin-top:100px;
   }
 
   .mla{
@@ -610,10 +623,6 @@ body.active{
   align-items: center;
   position: relative;
 
-  &.marginTop{
-    margin-top: 70px;
-  }
-
   &::before{
     content: "";
     background-color: $mainColor;
@@ -624,7 +633,8 @@ body.active{
     top: 0;
     left: 0;
     z-index: 1;
-    clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+    // clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+    clip-path: polygon(0 0, 30% 0, 70% 100%, 0% 100%);
   }
 
   &::after{
@@ -712,10 +722,6 @@ body.active{
 @media (min-width: 768px){
   .mv{
     height: calc(100vh - 100px);
-
-    &.marginTop{
-      margin-top: 100px;
-    }
   }
   .site-title{
     font-size: rem(80);
@@ -727,7 +733,7 @@ body.active{
 /* topページのworks */
 /* -------------------------------------------- */
 .works-top{
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 
   &__wrapper{
     padding-bottom: 70px;
@@ -766,6 +772,8 @@ body.active{
   &__item-content{
     padding: 20px 20px 0 20px;
     line-height: 1.6;
+    font-size: 14px;
+    letter-spacing: 0.15em;
   }
 }
 
@@ -1449,11 +1457,13 @@ span.wpcf7-not-valid-tip {
     &__heading{
       border-bottom: 1px solid $accentColor;
       display: inline-block;
-      font-size: rem(16);
+      font-size: rem(18);
+      font-weight: bold;
     }
 
     &__content{
       margin-top: 20px;
+      letter-spacing: 0.15em;
     }
   }
 }
@@ -1477,7 +1487,7 @@ span.wpcf7-not-valid-tip {
   }
 
   &__text{
-
+    letter-spacing: 0.15em;
   }
 }
 
@@ -1529,6 +1539,10 @@ span.wpcf7-not-valid-tip {
       &__list{
         margin-top: 0;
         width: 60%;
+      }
+
+      &__heading{
+        font-size: rem(20)
       }
     }
   }
